// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableTextarea 1`] = `
.c0 {
  background: transparent;
  border: none;
}

.c0:hover {
  background: #232323;
}

.c0:hover::-webkit-input-placeholder {
  color: #ccc;
}

.c0:hover::-moz-placeholder {
  color: #ccc;
}

.c0:hover:-ms-input-placeholder {
  color: #ccc;
}

.c0:hover::placeholder {
  color: #ccc;
}

.c0:focus {
  background: transparent;
}

.c0:focus::-webkit-input-placeholder {
  color: #ccc;
}

.c0:focus::-moz-placeholder {
  color: #ccc;
}

.c0:focus:-ms-input-placeholder {
  color: #ccc;
}

.c0:focus::placeholder {
  color: #ccc;
}

<textarea
  className="c0 form-control text-white text-nowrap overflow-scroll  pb-md-0 w-100"
  onChange={[Function]}
  placeholder=""
  value=""
/>
`;

exports[`EditableTextarea is header 1`] = `
.c0 {
  background: transparent;
  border: none;
}

.c0:hover {
  background: #232323;
}

.c0:hover::-webkit-input-placeholder {
  color: #ccc;
}

.c0:hover::-moz-placeholder {
  color: #ccc;
}

.c0:hover:-ms-input-placeholder {
  color: #ccc;
}

.c0:hover::placeholder {
  color: #ccc;
}

.c0:focus {
  background: transparent;
}

.c0:focus::-webkit-input-placeholder {
  color: #ccc;
}

.c0:focus::-moz-placeholder {
  color: #ccc;
}

.c0:focus:-ms-input-placeholder {
  color: #ccc;
}

.c0:focus::placeholder {
  color: #ccc;
}

<textarea
  className="c0 form-control text-white text-nowrap overflow-scroll fs-1 pb-md-0 w-100"
  onChange={[Function]}
  placeholder=""
  value=""
/>
`;
